--- a/ffDashboard.html
+++ b/ffDashboard.html
@@ -46,22 +46,46 @@
                 <label for="tab-fare" class="tab_btn">Fare</label>
              </div>
             </div>
-
+            <!--Route tab content-->
             <div class="content-container">
                 <div class = "content_box route-content">
-                    <label class="location-label">Enter starting location</label>
+                    <label class="location-label">Enter Starting location</label>
                     
                     <div class = "input-group">
-                        <div class="input-wrapper">
-                            <input type="text" placeholder="Starting location" aria-label="Starting location">
-                            <i class="fas fa-map-marker-alt location-icon"></i>
+                        <!--starting location-->
+                        <div class="input-container">
+                            <input type="checkbox" id="dropdown1" class="dropdown-control"> 
+                            <div class="input-wrapper">
+                                <div class="dropdown-overlay"></div>
+                                <i class = "fas fa-map-marker-alt location-icon"></i>
+                                <input type="text" class="main-input" placeholder="Starting location" aria-label="Starting location"> 
+                                <label for="dropdown1" class="dropdown-btn" aria-label="Toggle dropdown">
+                                    <i class="fas fa-chevron-down"></i>
+                                </label>
+                                <div class="dropdown-menu">
+                                    <div class="dropdown-item">Related areas</div>
+                                    <div class="dropdown-item">Placeholder lang muna</div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="input-wrapper">
-                            <input type="text" placeholder="Destination" aria-label="Destination">
-                            <i class="fas fa-flag-checkered location-icon"></i>
+                        <!--destination-->
+                        <div class="input-container">
+                            <input type="checkbox" id="dropdown2" class="dropdown-control">
+                            <div class="input-wrapper">
+                                <div class="dropdown-overlay"></div>
+                                <i class = "fas fa-map-marker-alt location-icon"></i>
+                                <input type="text" class="main-input" placeholder = "Destination" aria-label="Destination"> 
+                                <label for="dropdown2" class="dropdown-btn" aria-label="Toggle dropdown">
+                                    <i class="fas fa-chevron-down"></i>
+                                </label>
+                                <div class="dropdown-menu">
+                                    <div class="dropdown-item">Related areas</div>
+                                    <div class="dropdown-item">Placeholder lang muna</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
+                    <!--transportation vehicles-->
                     <div class = "section-title">Transportation Options</div>
                     <div class="vehicle-options">
                         <input type="radio" id="vehicle1" name="vehicle" class="vehicle-radio">
@@ -73,14 +97,15 @@
                         <input type="radio" id="vehicle3" name="vehicle" class="vehicle-radio">
                         <label for="vehicle3" class="vehicle-btn">Ordinary Bus<i class="fas fa-bus-alt vehicle-icon"></i></label>
                     </div>
-
+                    <!--for discount-->
                     <div class="section-title">Discount</div>
                     <div class ="discount">
                         <div class ="checkbox-wrapper">
                             <input type ="checkbox" id="discounts" name="discounts" value="Student/PWD/Senior Citizen">
                             <label for="discounts">Student/PWD/Senior Citizen</label>
-                     </div>
+                        </div>
                     </div>
+                    <!--calculate button-->
                     <label for="tab-fare" class="calculate-fare">Calculate Fare</label>
                 </div>
 
