app title navigates to homepage

--- a/ffDashboard.html
+++ b/ffDashboard.html
@@ -37,7 +37,7 @@
     <!--for sidebar-->
     <div class="sidebar" id = "sidebar">
         <div class = "sidebar-header">
-            <div class = "app-title">FairFare</div> <!--h   eader-->
+            <a href="ffHomepage.html" class = "app-title">FairFare</a> <!--h   eader-->
          </div>
 
         <div class = "tabs-container">
