nilagyan ko na footer

--- a/ffHomepage.html
+++ b/ffHomepage.html
@@ -105,7 +105,7 @@
         });
     </script>
 
-    <div class="section-AU reveal">ABOUT US</div>
+    <div id="about" class="section-AU reveal">ABOUT US</div>
     <div class="AU">
         <p class="reveal"><strong>FairFare</strong> is a commuter-focused fare calculator designed to provide quick, accurate, and transparent fare estimates for everyday travelers.</p>
         <p class="reveal">Whether you're heading to work, school, or home, we help you stay informed and in control of your transportation costs.</p>
@@ -113,7 +113,7 @@
         <p class="reveal">Built with simplicity and fairness in mind, FairFare empowers users with the information they need—before they even step out the door.</p>
     </div>
     
-    <div class="section-TC reveal">TERMS AND CONDITIONS</div>
+    <div id="TAndC" class="section-TC reveal">TERMS AND CONDITIONS</div>
     <div class="TandC">
         <p class="reveal"><strong><em>Effective Date: May 25, 2025</em></strong></p>
         <p class="reveal">Welcome to FairFare. By accessing or using our app, you agree to be bound by these Terms of Use. Please read them carefully.
@@ -127,7 +127,7 @@
         <p class="reveal">If you do not agree to these terms, please do not use the app.</p>
     </div>
 
-    <div class="section-PC reveal">PRIVACY POLICY</div>
+    <div id="privacy" class="section-PC reveal">PRIVACY POLICY</div>
     <div class="PC">
         <p class="reveal">Your privacy is important to us. This Privacy Policy explains how FairFare collects, uses, and protects your information.</p>
         <ul class="reveal"><strong>Information We Collect</strong>
@@ -151,7 +151,7 @@
         <p class="reveal delay-1s">For questions or concerns, contact us at support@fairfare.app.</p>
     </div>
 
-    <div class="section-CU reveal">CONTACT US</div>
+    <div id="contact" class="section-CU reveal">CONTACT US</div>
     <div class="CU">
         <ul class="reveal">We’d love to hear from you!
             <li><strong>Email:</strong>support@fairfare.app</li>
@@ -178,4 +178,15 @@
     });
     </script>
 </body>
+
+<footer class="app-footer"> 
+    <p>Copyright© 2025 FairFare · All rights reserved
+        <span class="footer-nav">
+            <a href="#about">About Us |</a>
+            <a href="#TAndC">Terms and Conditions |</a>
+            <a href="#privacy">Privacy Policy |</a>
+            <a href="#contact">Contact Us</a>
+        </span> 
+    </p>
+</footer>
 </html>
