favicon, adjust the sidebar

--- a/ffHomepage.html
+++ b/ffHomepage.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>PayFair - Ride Easy, Pay Fairly</title>
+    <link rel="icon" href="logo.png" type="image/png">
     <link rel="stylesheet" href="ffHomepage.css">
 </head>
 <body>
@@ -17,7 +18,9 @@
     <!-- Sidebar -->
     <nav class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <a href="ffDashboard.html"><h2 class="sidebar-title">PayFair</h2></a>
+            <a href="ffDashboard.html">
+            <img src="full logo.png" alt="PayFair Logo" class="sidebar-logo">
+            </a>
             <button class="close-btn" id="closeSidebar">×</button>
         </div>
         <div class="sidebar-menu">
