changes driving mode to transit mode

--- a/finalBackEndWithGeoRoute.html
+++ b/finalBackEndWithGeoRoute.html
@@ -271,7 +271,7 @@
       const request = {
         origin: origin.geometry.location,
         destination: destination.geometry.location,
-        travelMode: google.maps.TravelMode.DRIVING,
+        travelMode: google.maps.TravelMode.TRANSIT,
         optimizeWaypoints: true
       };
 
