changed edit profile div to button

--- a/user_account.html
+++ b/user_account.html
@@ -24,7 +24,7 @@
         <div class="user-pic">
             <img src="user-pic.png"> <!--user default profile picture-->
         </div>
-        <div>Edit profile</div> 
+        <button class="edit_profile">Edit profile</button>  <!--to edit user's profile-->
     </div>
     <a href="log-in.html"> <!--navigate to log in when signed out-->
         <button class="sign-out-btn">
